--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="../static/css/main.css">
-<title>Library Inventory</title>
+<title>Green Thumb</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
-            <a href="{{ url_for('site.home') }}" class="navbar-brand">Capitol Hill Library</a>
+            <a href="{{ url_for('site.home') }}" class="navbar-brand">Green Thumb</a>
             <button 
                 class="navbar-toggler" 
                 type="button" 
